.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-machine-api/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:08Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:08Z"
    name: allow-all-egress
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2025"
    uid: 1aa3a992-688f-429c-a17a-ce6fa1f67436
  spec:
    egress:
    - {}
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:09Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:09Z"
    name: allow-ingress-cluster
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2056"
    uid: fa04ea60-a4e6-4b8d-a1e8-1d637ea0b2e4
  spec:
    ingress:
    - ports:
      - endPort: 9442
        port: 9440
        protocol: TCP
    podSelector:
      matchExpressions:
      - key: k8s-app
        operator: In
        values:
        - cluster-autoscaler
        - cluster-autoscaler-operator
        - cluster-baremetal-operator
        - control-plane-machine-set-operator
        - controller
        - machine-api-operator
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:10Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:10Z"
    name: allow-ingress-kubeapi
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2093"
    uid: 39c01213-ca92-4926-bf06-3e72e5a2b12d
  spec:
    ingress:
    - ports:
      - port: 9443
        protocol: TCP
    podSelector:
      matchExpressions:
      - key: k8s-app
        operator: In
        values:
        - cluster-autoscaler
        - cluster-autoscaler-operator
        - cluster-baremetal-operator
        - control-plane-machine-set-operator
        - controller
        - machine-api-operator
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:10Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:10Z"
    name: allow-ingress-metal
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2139"
    uid: 974b2a2a-cc9e-4d14-92e1-a02ae590a360
  spec:
    ingress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 6180
        protocol: TCP
      - port: 6183
        protocol: TCP
      - port: 6385
        protocol: TCP
      - port: 6388
        protocol: TCP
      - port: 8084
        protocol: TCP
      - port: 9447
        protocol: TCP
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:11Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:11Z"
    name: allow-ingress-metrics
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2180"
    uid: c67816eb-1a68-40c1-85bf-73d2baddaab0
  spec:
    ingress:
    - ports:
      - port: 8085
        protocol: TCP
      - endPort: 8444
        port: 8440
        protocol: TCP
      - endPort: 9192
        port: 9191
        protocol: TCP
    podSelector:
      matchExpressions:
      - key: k8s-app
        operator: In
        values:
        - cluster-autoscaler
        - cluster-autoscaler-operator
        - cluster-baremetal-operator
        - control-plane-machine-set-operator
        - controller
        - machine-api-operator
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: MachineAPI
      exclude.release.openshift.io/internal-openshift-hosted: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:12Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:exclude.release.openshift.io/internal-openshift-hosted: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:12Z"
    name: default-deny
    namespace: openshift-machine-api
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2207"
    uid: 58475d33-07de-4f51-be87-c47927b24524
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: NetworkPolicyList
metadata:
  resourceVersion: "34933"
